# weight_blended_OIT

./: CMakeLists.txt  README.md
lib/: vermilion.cpp
src/exp-weight-blended-oit/: SceneCreator.cpp  SceneCreator.h  Shaders.cpp  VBObjectExt.cpp  VBObjectExt.h  WeightBlendedOitExample.cpp  WeightBlendedOitExample.h
